Fix Last updated on Done page
Last updated paragraph below the send feedback button on pages like https://www.gov.uk/done/tax-disc breaks because the form above is floated with a width of 95%. Removing this float and width fixes this layout issue.

https://www.pivotaltracker.com/story/show/87918506

--- a/app/assets/stylesheets/views/_completed-transaction.scss
+++ b/app/assets/stylesheets/views/_completed-transaction.scss
@@ -1,8 +1,6 @@
 .transaction-done {
   form {
     @include core-19;
-    float: left;
-    width: 95%;
 
     input {
       margin-right: 0.5em;
